--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Parallel Suite</th></tr>
-<tr><td><a href="#t0">Firefox Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Chrome Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">18</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Firefox Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">2,554</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Chrome Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">2,045</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">4,599</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Parallel Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
-<tbody id="t1"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Parallel Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Firefox Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallelTest.TestBrowser</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1594259977925</td><td rowspan="1">2379</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Chrome Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallelTest.TestBrowser</td><td><a href="#m1">doLogin</a></td><td rowspan="1">1594259980442</td><td rowspan="1">2038</td></tr></tbody>
 </table>
-<h2>Firefox Test</h2><h2>Chrome Test</h2></body>
+<h2>Firefox Test</h2><h3 id="m0">parallelTest.TestBrowser#doLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>firefox</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Chrome Test</h2><h3 id="m1">parallelTest.TestBrowser#doLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+</body>
 </html>
