--- a/test-output/old/Parallel Suite/methods.html
+++ b/test-output/old/Parallel Suite/methods.html
@@ -1,2 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Parallel Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="dac38f">  <td>20/07/09 09:59:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBrowser.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestBrowser@54c5a2ff]">doLogin</td> 
+  <td>main@1158676965</td>   <td></td> </tr>
+<tr bgcolor="dac38f">  <td>20/07/09 09:59:40</td>   <td>2517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestBrowser.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestBrowser@795509d9]">doLogin</td> 
+  <td>main@1158676965</td>   <td></td> </tr>
 </table>
