--- a/test-output/index.html
+++ b/test-output/index.html
@@ -155,14 +155,14 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Parallel Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Firefox Test&quot;&gt;
+&lt;suite parallel=&quot;tests&quot; name=&quot;Parallel Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Firefox Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;parallelTest.TestBrowser&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Firefox Test --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Chrome Test&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; parallel=&quot;tests&quot; name=&quot;Chrome Test&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;parallelTest.TestBrowser&quot;/&gt;
@@ -212,11 +212,11 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'doLogin')
 data.setCell(0, 2, 'parallelTest.TestBrowser')
-data.setCell(0, 3, 2379);
+data.setCell(0, 3, 2020);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'doLogin')
 data.setCell(1, 2, 'parallelTest.TestBrowser')
-data.setCell(1, 3, 2038);
+data.setCell(1, 3, 2020);
 window.suiteTableData['Parallel_Suite']= { tableData: data, tableDiv: 'times-div-Parallel_Suite'}
 return data;
 }
@@ -249,12 +249,12 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">parallelTest.TestBrowser</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">doLogin(firefox)</span>
+                <span class="method-name">doLogin(chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">doLogin(chrome)</span>
-                <span class="method-start">2517 ms</span>
+                <span class="method-name">doLogin(firefox)</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
