--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="92827e">  <td>20/07/08 15:40:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin(java.lang.String, java.lang.String)[pri:0, instance:parameterization.LoginTest@644baf4a]">testLogin</td> 
-  <td>main@2114289475</td>   <td></td> </tr>
-<tr bgcolor="92827e">  <td>20/07/08 15:40:55</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testLogin(java.lang.String, java.lang.String)[pri:0, instance:parameterization.LoginTest@644baf4a]">testLogin</td> 
-  <td>main@2114289475</td>   <td></td> </tr>
-<tr bgcolor="92827e">  <td>20/07/08 15:40:55</td>   <td>74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testUserReg(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:parameterization.LoginTest@644baf4a]">testUserReg</td> 
-  <td>main@2114289475</td>   <td></td> </tr>
-<tr bgcolor="92827e">  <td>20/07/08 15:40:55</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.testUserReg(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:parameterization.LoginTest@644baf4a]">testUserReg</td> 
-  <td>main@2114289475</td>   <td></td> </tr>
+<tr bgcolor="92827e">  <td>20/07/09 11:14:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParallelDP.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestParallelDP@2a265ea9]">doLogin</td> 
+  <td>TestNG-PoolService-0@810924659</td>   <td></td> </tr>
+<tr bgcolor="92827e">  <td>20/07/09 11:14:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestParallelDP.doLogin(java.lang.String)[pri:0, instance:parallelTest.TestParallelDP@2a265ea9]">doLogin</td> 
+  <td>TestNG-PoolService-0@810924659</td>   <td></td> </tr>
 </table>
